--- a/404.html
+++ b/404.html
@@ -21,17 +21,30 @@
     body a:visited{
       color: hsl(263, 93%, 66%);
     }
+
+    #logo404{
+      position: absolute;
+      left: -10px;
+      top: -10px;
+    }
   </style>
 
   <meta property="og:site_name" content="Physics Derived">
   <meta property="og:title" content="Page Not Found">
 </head>
 <body>
+  <div style="background-color: white; width: 70px; 
+  height: 70px; margin: auto; border-radius: 80px; padding: 0; position: relative; margin-bottom: 30px;">
+    <a href="/"><img id="logo404" src="nbgicon.png" alt="Website icon" width="100px;"></a>
+  </div>
+
   <h1>404 - Page Not Found</h1>
-  <p>Sorry, the requested page doesn't exist.</p>
+
+  <p style="margin: 0;">Sorry, the requested page doesn't exist.</p>
+  
   <div id="suggestion-box" style="margin:auto; width:auto"></div>
-  <br/>
-  <a href="/">Back to Home</a>
+  
+  <p>Else, you might like to  visit the website's <a href="/">Home Page</a>.</p>
 
 
   <script src="index.js"></script>
@@ -81,10 +94,10 @@
 
     const matches = suggestions.filter(s => term.toLowerCase().includes(s.keyword));
     if (matches.length > 0) {
-      const links = matches.map(m => `<li><a href="${m.url}">${m.title}</a></li>`).join('');
+      const links = matches.map(m => `<li style="display: inline-block"><a href="${m.url}">${m.title}</a></li>`).join(',');
       document.getElementById('suggestion-box').innerHTML = `
-      <p>Were you looking for:</p>
-      <ul style="list-style-type:none">${links}</ul>
+      <p style="display: inline-block"><b>Were you looking for:</b></p>
+      <ul style="list-style-type:none; display: inline-block; padding-left: 3px">${links}</ul>
       `;
     }
 
