changed the link color of about page

--- a/about.html
+++ b/about.html
@@ -12,6 +12,13 @@
     <title>About</title>
     <meta property="og:site_name" content="Physics Derived">
     <meta property="og:title" content="About Us">
+
+    <style>
+        main a:link{
+            text-decoration: none;
+            color: hsl(920, 100%, 50%);
+        }
+    </style>
 </head>
 <body>
     <header>
