chnaged the src of icon in 404

--- a/404.html
+++ b/404.html
@@ -35,7 +35,7 @@
 <body>
   <div style="background-color: white; width: 70px; 
   height: 70px; margin: auto; border-radius: 80px; padding: 0; position: relative; margin-bottom: 30px;">
-    <a href="/"><img id="logo404" src="nbgicon.png" alt="Website icon" width="100px;"></a>
+    <a href="/"><img id="logo404" src="/nbgicon.png" alt="Website icon" width="100px;"></a>
   </div>
 
   <h1>404 - Page Not Found</h1>
