corrected the index.js path in 404.html

--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@
   <p>You might like to  visit the website's <a href="/">Home Page</a>.</p>
 
 
-  <script src="index.js"></script>
+  <script src="/index.js"></script>
 
   <script>
     
