corrected the link to the style.css in 404.html

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Page Not Found</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="/style.css"/>
   <link rel="canonical" href="https://physicsderived.club/404">
 
   <style>
