made the year to automatically update in the footer

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
     <footer>
-        <p> &copy; 2025 <a href="/index.html">Physics Derived</a>. All Rights Reserved.</p>
+        <p style="align-self: center; padding-left: 10px; text-shadow: 0 0 1px white;"> &copy; <span id="cyear"></span> <a href="/index.html">Physics Derived</a>. All Rights Reserved.</p>
 
         <p>Credits:<br/> 
             <ol>
