added some content in vector.html and added credit to geogebra in main page

--- a/index.html
+++ b/index.html
@@ -148,7 +148,11 @@
         <p>Credits:<br/> 
             <ol>
                 <li>
-                    Icons from <a href="https://fontawesome.com" target="_blank">Font Awesome</a> licenced under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank">CC BY 4.0</a>
+                    Icons from <a href="https://fontawesome.com" target="_blank" rel="noopener noreferrer">Font Awesome</a> licenced under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer">CC BY 4.0</a>
+                </li>
+
+                <li>   
+                    Many illustrations on this site are created using <a href="https://www.geogebra.org/" target="_blank" rel="noopener noreferrer">GeoGebra</a>
                 </li>
 
                 <!-- <li>
