added new footer links to all pages

--- a/about.html
+++ b/about.html
@@ -105,6 +105,36 @@
 
     <footer>
         <p style="align-self: center; padding-left: 10px; text-shadow: 0 0 1px white;"> &copy; <span id="cyear"></span> <a href="/index.html">Physics Derived</a>. All Rights Reserved.</p>
+
+        <div id="footdiv">
+            <div class="c1fdiv">
+
+                <p><a href="contact.html" class="extlink">Contact  
+                    <sup>
+                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
+                    </sup>
+                </a></p>
+
+                <p><a href="feedback.html" class="extlink">Feedback
+                    <sup>
+                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
+                    </sup>
+                </a></p>
+
+                <p><a href="credits.html" class="extlink">Credits
+                    <sup>
+                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
+                    </sup>
+                </a></p>
+
+            </div>
+            <div class="c1fdiv">
+                <!-- <p><a href="credits.html">Credits</a></p> -->
+            </div>
+            <div class="c1fdiv">
+                <!-- <p><a href="credits.html">Credits</a></p> -->
+            </div>
+        </div>
     </footer>
 
 
