--- a/index.html
+++ b/index.html
@@ -145,21 +145,35 @@
     <footer>
         <p style="align-self: center; padding-left: 10px; text-shadow: 0 0 1px white;"> &copy; <span id="cyear"></span> <a href="/index.html">Physics Derived</a>. All Rights Reserved.</p>
 
-        <p>Credits:<br/> 
-            <ol>
-                <li>
-                    Icons from <a href="https://fontawesome.com" target="_blank" rel="noopener noreferrer">Font Awesome</a> licenced under <a href="https://creativecommons.org/licenses/by/4.0/" target="_blank" rel="noopener noreferrer">CC BY 4.0</a>
-                </li>
+        <div id="footdiv">
+            <div class="c1fdiv">
 
-                <li>   
-                    Many illustrations on this site are created using <a href="https://www.geogebra.org/" target="_blank" rel="noopener noreferrer">GeoGebra</a>
-                </li>
+                <p><a href="contact.html" class="extlink">Contact  
+                    <sup>
+                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
+                    </sup>
+                </a></p>
 
-                <!-- <li>
-                    Pdf from <a href="https://github.com/eKoopmans/html2pdf" target="_blank">html2pdf.js</a> licenced under <a href="https://github.com/eKoopmans/html2pdf.js/blob/main/LICENSE" target="_blank">MIT License</a>
-                </li> -->
-            </ol>
-        </p>
+                <p><a href="feedback.html" class="extlink">Feedback
+                    <sup>
+                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
+                    </sup>
+                </a></p>
+
+                <p><a href="credits.html" class="extlink">Credits
+                    <sup>
+                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
+                    </sup>
+                </a></p>
+
+            </div>
+            <div class="c1fdiv">
+                <!-- <p><a href="credits.html">Credits</a></p> -->
+            </div>
+            <div class="c1fdiv">
+                <!-- <p><a href="credits.html">Credits</a></p> -->
+            </div>
+        </div>
     </footer>
 
 
