added / for the links in footer to work properly and chnaged the box shadow of all main, header and footer to be black

--- a/404.html
+++ b/404.html
@@ -82,6 +82,7 @@
       { keyword: 'contact', title: 'Contact Us', url: '/contact' },
       { keyword: 'feedback', title: 'Feedback', url: '/feedback' },
       { keyword: 'chapter', title: 'Chapters', url: '/chapters' }, 
+      { keyword: 'cred', title: 'Credits', url: '/credits' }, 
       
       // Vectors.html topics
       { keyword: 'intro', title: 'Introduction (Vectors)', url: '/chapters/vectors#Introduction' },
