--- a/contact.html
+++ b/contact.html
@@ -82,16 +82,16 @@
         <div id="footdiv">
             <div class="c1fdiv">
 
-                <p><a href="contact.html">Contact  
+                <p><a href="/contact.html">Contact  
                 </a></p>
 
-                <p><a href="feedback.html" class="extlink">Feedback
+                <p><a href="/feedback.html" class="extlink">Feedback
                     <sup>
                         <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
                     </sup>
                 </a></p>
 
-                <p><a href="credits.html" class="extlink">Credits
+                <p><a href="/credits.html" class="extlink">Credits
                     <sup>
                         <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
                     </sup>
