--- a/credits.html
+++ b/credits.html
@@ -181,19 +181,19 @@
         <div id="footdiv">
             <div class="c1fdiv">
 
-                <p><a href="contact.html" class="extlink">Contact  
+                <p><a href="/contact.html" class="extlink">Contact  
                     <sup>
                         <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
                     </sup>
                 </a></p>
 
-                <p><a href="feedback.html" class="extlink">Feedback
+                <p><a href="/feedback.html" class="extlink">Feedback
                     <sup>
                         <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
                     </sup>
                 </a></p>
 
-                <p><a href="credits.html">Credits
+                <p><a href="/credits.html">Credits
                 </a></p>
 
             </div>
