--- a/feedback.html
+++ b/feedback.html
@@ -82,16 +82,16 @@
         <div id="footdiv">
             <div class="c1fdiv">
 
-                <p><a href="contact.html" class="extlink">Contact  
+                <p><a href="/contact.html" class="extlink">Contact  
                     <sup>
                         <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
                     </sup>
                 </a></p>
 
-                <p><a href="feedback.html">Feedback
+                <p><a href="/feedback.html">Feedback
                 </a></p>
 
-                <p><a href="credits.html" class="extlink">Credits
+                <p><a href="/credits.html" class="extlink">Credits
                     <sup>
                         <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
                     </sup>
