added the extink icon dynamically

--- a/404.html
+++ b/404.html
@@ -28,7 +28,8 @@
       top: -10px;
     }
   </style>
-
+  
+  <link rel="icon" type="image/x-icon" href="https://physicsderived.club/favicon.ico"/>
   <meta property="og:site_name" content="Physics Derived">
   <meta property="og:title" content="Page Not Found">
 </head>
