--- a/credits.html
+++ b/credits.html
@@ -134,42 +134,21 @@
 
     <main style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
 
-        <h2 style="font-size: 1.9em; letter-spacing: 0.3px; font-weight: 600; border-bottom: 2px solid hsl(210, 100%, 45%); padding-bottom: 8px;">Credits & Acknowledgements</h2>
-
-        <ul style="font-size: 1.03em; line-height: 1.4; margin-top: 24px; list-style-type: disc; padding-left: 20px;">
-
+        <h2 style="font-size: 1.9em; letter-spacing: 0.3px; font-weight: 600; border-bottom: 2px solid hsl(210, 100%, 45%); padding-bottom: 8p;">Credits & Acknowledgements</h2>
+        <ul style="font-size: 1.03em; line-height: 1.4;margin-top: 24px; list-style-type: disc;padding-left: 20px;">
             <li style="margin-bottom: 16px;">
                 <strong><u>Iconography</u> :</strong> Some of the  icons use in this site are from 
-                <a href="https://fontawesome.com" class="extlink">Font Awesome 
-                    <sup>
-                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
-                    </sup>
-                </a>, 
-                licensed under the 
-                <a href="https://creativecommons.org/licenses/by/4.0/" class="extlink">Creative Commons Attribution 4.0 International License (CC BY 4.0) 
-                    <sup>
-                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
-                    </sup>
-                </a>.
+                <a href="https://fontawesome.com" class="extlink">Font Awesome</a>, 
+                licensed under the <a href="https://creativecommons.org/licenses/by/4.0/" class="extlink">Creative Commons Attribution 4.0 International License (CC BY 4.0)</a>.
             </li>
-
             <li>
                 <strong><u>Illustrations</u> :</strong> Many diagrams and visual figures have been developed using the 
-
-                <a href="https://www.geogebra.org/" class="extlink">
-                    GeoGebra 
-                    <sup>
-                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
-                    </sup>
-                </a> platform.
+                <a href="https://www.geogebra.org/" class="extlink">GeoGebra</a> platform.
             </li>
-            
             <!-- <li>
                 Pdf from <a href="https://github.com/eKoopmans/html2pdf" target="_blank">html2pdf.js</a> licenced under <a href="https://github.com/eKoopmans/html2pdf.js/blob/main/LICENSE" target="_blank">MIT License</a>
             </li> -->
-
         </ul>
-    </section>
 
     </main>
 
@@ -181,20 +160,9 @@
         <div id="footdiv">
             <div class="c1fdiv">
 
-                <p><a href="/contact.html" class="extlink">Contact  
-                    <sup>
-                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
-                    </sup>
-                </a></p>
-
-                <p><a href="/feedback.html" class="extlink">Feedback
-                    <sup>
-                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
-                    </sup>
-                </a></p>
-
-                <p><a href="/credits.html">Credits
-                </a></p>
+                <p><a href="/contact.html" class="extlink">Contact</a></p>
+                <p><a href="/feedback.html" class="extlink">Feedback</a></p>
+                <p><a href="/credits.html" class="extlink">Credits</a></p>
 
             </div>
             <div class="c1fdiv">
