--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <a href="chapters/vectors.html">
                 <div class="chbox">
-                    <img src="images/vectorf.png" alt="Free body diagram of an extended body" style="width: 181px;"/>
+                    <img src="images/vectorf.png" alt="Free body diagram of an extended body" style="width: 181px; background: white"/>
                     <h3>Vectors</h3>
                 </div>
             </a>
@@ -148,23 +148,9 @@
         <div id="footdiv">
             <div class="c1fdiv">
 
-                <p><a href="/contact.html" class="extlink">Contact  
-                    <sup>
-                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
-                    </sup>
-                </a></p>
-
-                <p><a href="/feedback.html" class="extlink">Feedback
-                    <sup>
-                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
-                    </sup>
-                </a></p>
-
-                <p><a href="/credits.html" class="extlink">Credits
-                    <sup>
-                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
-                    </sup>
-                </a></p>
+                <p><a href="/contact.html" class="extlink">Contact</a></p>
+                <p><a href="/feedback.html" class="extlink">Feedback</a></p>
+                <p><a href="/credits.html" class="extlink">Credits</a></p>
 
             </div>
             <div class="c1fdiv">
