--- a/feedback.html
+++ b/feedback.html
@@ -82,20 +82,9 @@
         <div id="footdiv">
             <div class="c1fdiv">
 
-                <p><a href="/contact.html" class="extlink">Contact  
-                    <sup>
-                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
-                    </sup>
-                </a></p>
-
-                <p><a href="/feedback.html">Feedback
-                </a></p>
-
-                <p><a href="/credits.html" class="extlink">Credits
-                    <sup>
-                        <i class="fa-solid fa-arrow-up-right-from-square fa-2xs" aria-hidden="true"></i>
-                    </sup>
-                </a></p>
+                <p><a href="/contact.html" class="extlink">Contact</a></p>
+                <p><a href="/feedback.html" class="extlink">Feedback</a></p>
+                <p><a href="/credits.html" class="extlink">Credits</a></p>
 
             </div>
             <div class="c1fdiv">
