--- a/404.html
+++ b/404.html
@@ -21,12 +21,6 @@
     body a:visited{
       color: hsl(263, 93%, 66%);
     }
-
-    #logo404{
-      position: absolute;
-      left: -10px;
-      top: -10px;
-    }
   </style>
   
   <link rel="icon" type="image/x-icon" href="https://physicsderived.club/favicon.ico"/>
@@ -34,37 +28,16 @@
   <meta property="og:title" content="Page Not Found">
 </head>
 <body>
-  <div style="background-color: white; width: 70px; 
-  height: 70px; margin: auto; border-radius: 80px; padding: 0; position: relative; margin-bottom: 30px;">
-    <a href="/"><img id="logo404" src="/nbgicon.png" alt="Website icon" width="100px;"></a>
-  </div>
+
+  <a href="/"><img id="logo404" src="/images/icon.png" alt="Website icon" width="100px;"></a>
+
 
   <h1>404 - Page Not Found</h1>
 
   <p style="margin: 0;">Sorry, the requested page doesn't exist.</p>
 
   <div id="suggestion-box" style="margin:auto; width:auto"></div>
-  
-  <!-- <div style="margin:auto; width:auto;">
-    <p style="display: inline-block; margin-bottom: 8px;"><b>Were you looking for:</b></p>
-    <ul style="list-style-type:none; display: inline-block; padding: 0; padding-left: 3px; margin: 0; margin-bottom: 16px">
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-      <li style="display: inline-block">Hello</li>
-    </ul>
-  </div> -->
+
   <p>You might like to  visit the website's <a href="/">Home Page</a>.</p>
 
 
