added content in vectors (negation od vectors in component form) and external link to forms and styling for overflowed imgdiv

--- a/feedback.html
+++ b/feedback.html
@@ -71,6 +71,8 @@
             </div>
         </div> -->
 
+        <h3 style="text-align: center;">Facing difficulty in filling the form here? Fill it <a href="https://forms.gle/FuMzi9BnMo7MJpSz7" class="extlink">externally</a>.</h3>
+
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSckTGIf484YcuR275eDtyjRPjWS9K4kmopAoPNwiq3_6gnG_A/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </main>
 
