--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,8 @@
             </div>
         </div> -->
 
+        <h3 style="text-align: center;">Facing difficulty in filling the form here? Fill it <a href="https://forms.gle/Vp5Ffoovtu6z1W4u6" class="extlink">externally</a>.</h3>
+
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdGu20JUuQ41AFcZKbwReLDQKGSdQIZFB64VCQMu4jX8yjqKw/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </main>
 
