added external link color to contact and feedback forms and added tab option for bfnav

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,16 @@
     <meta property="og:site_name" content="Physics Derived">
     <meta property="og:title" content="Contact Us">
 
+    <style>
+        main a:link{
+            text-decoration: none;
+            color: hsl(920, 100%, 50%);
+        }
+        main a:hover{
+            text-decoration: underline;
+        }
+    </style>
+
 
     
 </head>
@@ -71,7 +81,7 @@
             </div>
         </div> -->
 
-        <h3 style="text-align: center;">Facing difficulty in filling the form here? Fill it <a href="https://forms.gle/Vp5Ffoovtu6z1W4u6" class="extlink">externally</a>.</h3>
+        <h3 style="text-align: center;">Facing difficulty in filling the form here? <br/>Fill it <a href="https://forms.gle/Vp5Ffoovtu6z1W4u6" class="extlink">externally</a>.</h3>
 
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdGu20JUuQ41AFcZKbwReLDQKGSdQIZFB64VCQMu4jX8yjqKw/viewform?embedded=true" width="100%" height="1000px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </main>
