--- a/feedback.html
+++ b/feedback.html
@@ -93,14 +93,21 @@
 
         <div id="footdiv">
             <div class="c1fdiv">
-
-                <p><a href="/contact.html" class="extlink">Contact</a></p>
-                <p><a href="/feedback.html" class="extlink">Feedback</a></p>
-                <p><a href="/credits.html" class="extlink">Credits</a></p>
+                <p>\(\text{Physics Derived} \)</p>
+                <div class="c2fdiv">
+                    <p><a href="/contact.html" class="extlink">Contact </a></p>
+                    <p><a href="/feedback.html" class="extlink">Feedback</a></p>
+                    <p><a href="/credits.html" class="extlink">Credits</a></p>
+                </div>
 
             </div>
             <div class="c1fdiv">
-                <!-- <p><a href="credits.html">Credits</a></p> -->
+                <p>\(\text{Our Websites}\)</p>
+                <div class="c2fdiv">
+                    <p><a href="https://math.physicsderived.club" class="extlink">Math Derived</a></p>
+                    <!-- <p><a href="https://math.physicsderived.club" class="extlink">Math Derived</a></p>
+                    <p><a href="https://math.physicsderived.club" class="extlink">Math Derived</a></p> -->
+                </div>
             </div>
             <div class="c1fdiv">
                 <!-- <p><a href="credits.html">Credits</a></p> -->
