added euler angles calculator

--- a/parts/_header.html
+++ b/parts/_header.html
@@ -38,5 +38,6 @@
 
         <a href="/contact.html" title="Contact Us"><div class="nav-item">Contact</div></a>
         <a href="/feedback.html" title="Your Feedback"><div class="nav-item">Feedback</div></a>
+        <a href="/tools" title="Tools"><div class="nav-item">Tools</div></a>
     </nav>
 </header>
