corrected the link to euler_angles_calculator

--- a/src/tools/index.html
+++ b/src/tools/index.html
@@ -23,7 +23,7 @@
         <hr><br/>
 
         <div id="divgrid">
-            <a href="tools/euler_angles_calculator.html">
+            <a href="euler_angles_calculator.html">
                 <div class="chbox">
                 <img src="images/euler_angles.png" alt="" style="width: 200px; padding-top: 8px;"/>
                 <h3 style="padding-top: 24px;">Euler Angles Calculator</h3>
