added user guide to the euler angles calculator

--- a/src/tools/index.html
+++ b/src/tools/index.html
@@ -18,7 +18,7 @@
         <center><h1>Tools</h1></center>
 
         <p>
-            Following tools can be used fairly often in Physics, Mathematical modelling, Ribotics, Aviation, Astrophysics, Computer Graphics and related fields. These inlcludes Euler Angles Calculator.... Choose the one you need.
+            Following tools are used fairly often in Physics, Mathematical modelling, Robotics, Aviation, Astrophysics, Computer Graphics and related fields. These includes Euler Angles Calculator.... Choose the one you need.
         </p>
         <hr><br/>
 
