added new topic of cross proeducts in the vectors chapter, also decrease the width of the main box from 85% to 70%, added email in footer

--- a/parts/_footer.html
+++ b/parts/_footer.html
@@ -6,6 +6,7 @@
             <p>\(\text{Physics Derived} \)</p>
             <div class="c2fdiv">
                 <p><a href="/contact.html" class="extlink">Contact </a></p>
+                <p><a href="mailto:contact@physicsderived.club">Email: </a><i>contact@physicsderived.club</i></p>
                 <p><a href="/feedback.html" class="extlink">Feedback</a></p>
                 <p><a href="/credits.html" class="extlink">Credits</a></p>
             </div>
